--- a/css/main.css
+++ b/css/main.css
@@ -1099,3 +1099,6 @@ div.ttPeriodCurrent {
 	background: -webkit-gradient(linear, left top, left bottom, from(#339900), to(#2E8400))!important;
 	background: -moz-linear-gradient(top,  #339900,  #2E8400)!important;
 }
+div#TB_ajaxContent, div#TB-title {
+	background-color: #555;
+}
