--- a/css/main.css
+++ b/css/main.css
@@ -1066,6 +1066,19 @@ div.ttPersonalCalendar {
 	color: #fff; 
 	font-weight: bold ;
 }
+span.ttSpaceBookingCalendar {
+	color: #fff;
+	font-weight: bold; 
+	margin: 0px -2px 0px 5px; 
+	background-color: #E5760D; 
+	padding: 5px 7px; 
+	border: 1px solid #555;
+}
+div.ttSpaceBookingCalendar {
+	background-color: #E5760D; 
+	color: #fff; 
+	font-weight: bold ;
+}
 div.ttClosure {
 	border: 1px solid rgb(136,136,136);
 	background-color: #AA7278;
