--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,9 @@ html {
 
 body {
 	padding: 0 0 20px;
-	background: url("../img/backgroundPage.png") no-repeat scroll center top #191919;
-	color:#ddd;
-	font-family:Arial, Helvetica, sans-serif;
-	 height: 100%;
+	background: url("../img/backgroundPage.jpg") repeat fixed center top #000;
+	color:#888;
+	font-family: Helvetica, Arial, sans-serif!important;
 }
 
 /* LAYOUT */
@@ -44,46 +43,78 @@ body {
 	width:1130px;
 	margin: 0px auto;
 	position:relative ;
-	background-color: #ffffff ;
-	background: url("../img/backgroundWrapOuter.png") no-repeat scroll center top;
 }
 #wrap {
 	width:1101px;
-	padding-top: 30px;
+	padding-top: 10px;
 	padding-left: 1px;
-	margin: 0px auto;
+	margin: 10px auto ;
+	position:relative ;
+	border-radius: 5px; 
+	box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+}
+#wrap-report {
+	width:1101px;
+	padding-top: 10px;
+	padding-left: 1px;
+	margin: 10px auto ;
 	position:relative ;
 }
 #header {
-	margin: 0 0 0 -1px ;
-	padding: 0 0 8px
-	height: 300px ;
-	border-bottom: 1px solid #666;	
+	margin: -8px 0 0 -1px ;
+	padding: 0 ;
+	height: 158px!important ;
+	background-color: rgba(20,20,20,0.65) ;
+	border-radius: 5px 5px 0 0; 
 }
-#header-left {
-	font: 265% arial;
+#header-logo {
 	margin:0 0 0 0px;
 	padding:0px 0;
 	color:#ccc;
 	border:none;
 	width: 250px;
 }
-#header-right {
+#header-logo-report {
+	margin:0 0 0 0px;
+	padding:0px 0;
+	color:#ccc;
+	border:none;
+	width: 250px;
+}
+#header-menu {
+	color:#fff;
+	font-weight:bold;
+	height: 32px!important;	
+	margin: 3px 0 0 0 ;
+	background-color: rgba(0,0,0,0.9) ;
+	border-top: 1px solid rgba(150,150,150,0.25);	
+	border-bottom: 1px solid rgba(150,150,150,0.25);	
+}
+#header-finder {
+	float: right ;
 	color:#fff;
 	font-weight:bold;
 	position:absolute;
-	top:30px;
-	right:0px;
+	top:24px;
+	right:24px;
 	left:auto;
-	width:710px;
-	
+	width:360px;	
 }
+#header-finder h2 {
+	text-align: right ;
+	border-bottom: none ;
+	font-size: 90% ;
+	margin-bottom: 0!important ;
+	margin-top: 0!important ;
+}
+
 #content-wrap {
-	position:relative;
-	width:1101px; 
-	background: url("../img/backgroundContent.png") repeat-y center top #3B73AF;
+	width:1102px; 
+	background-color: rgba(0,0,0,0.65) ;
+	margin: 0 0 0 -1px;	
 }
 #content-wrap-report {
+	background-color: rgba(255,255,255,0.9) ;
 	position:relative;
 	width:100%; 
 }
@@ -96,60 +127,48 @@ body {
 	position:relative;
     overflow:hidden;
     float:left;
-    background-color: #333;
+	border-right: 1px solid rgba(0,0,0,0.15);	
 }
 #content-wide {
 	margin: 0 0 0 -1px;
-	padding: 0 10px 0 20px;
+	padding: 0 25px 0 25px;
 	min-height: 470px;
 	width: 1072px;
 	position:relative;
     overflow:hidden;
-    float:left;
-    background-color: #333;
 }
 #content div.trail {
 	text-align: left;
 	font-size: 70%;
-	margin: 0px 0px 14px 0px; 
-	height: 22px;
-	margin-left: -25px;
-	background: url("../img/backgroundTrail.png") repeat-x ;
-	padding-top: 9px;
+	margin: 10px 0px 10px -18px; 
+	height: 16px;
+	padding-top: 7px;
 	padding-left: 20px;
-	font-style: italic;
 	font-weight: normal;
 	width: 783px;
-	color: #3B73AF ;
+	color: #3B73AF ;	
 }
 #content-wide div.trail {
 	text-align: left;
 	font-size: 70%;
-	margin: 0px 0px 14px 0px; 
-	height: 22px;
-	margin-left: -25px;
-	background: url("../img/backgroundTrail.png") repeat-x ;
-	padding-top: 9px;
+	margin: 10px 0px 10px -18px; 
+	height: 16px;
+	padding-top: 7px;
 	padding-left: 20px;
-	font-style: italic;
 	font-weight: normal;
 	width: 1087px;
 	color: #3B73AF ;
 }
 div.trailEnd {
-	font-size: 145%;
 	padding-left: 3px;
-	margin-top: -3px;
 	float: left;
-	text-decoration: none; 
-	font-weight: bold;
 	color: #3B73AF;
 }
 div.trailHead {
 	float: left;
 }
 div.trailHead a {
-	text-decoration: none; 
+	text-decoration: underline; 
 	font-weight: normal;
 	color: #3B73AF;
 }
@@ -162,45 +181,53 @@ div.trailHead a:hover {
 	float: right;
    	width:250px;
 	padding: 12px 26px 40px 22px;
-	margin-top: -15px;
-	min-height: 420px;
-	
+	margin-top: -12px;
+	min-height: 200px
 }
+
 div.sidebarExtra {
 	padding: 15px 0 ;
 	margin-bottom: 10px ;
 }
 #footer {
 	clear:both;
-	margin-top: 0px ;
-	padding: 5px 0px 5px 0px;
+	width:1102px; 
+	background-color: rgba(20,20,20,0.8) ;
+	margin: 0 0 0 -1px;	
+	padding: 20px 0px 10px 0px;
 	font-size:85%;
-	font-family:Arial, Helvetica, sans-serif;
-	font-style: italic;
 	color:#fff;
 	text-align: center ;
-	background-color: #333 ;
-	border-bottom: 1px solid #666 ;
-	border-top: 1px solid #666 ;
-	text-shadow: 2px 2px 2px rgba(50, 50, 50, 0.1);
+	line-height: 135% ;
+	max-height: 120px ;
 }
-
+#footer-report {
+	clear:both;
+	width:750px; 
+	color: #333;
+	margin: 0 0 0 -1px;	
+	padding: 5px 0px 5px 0px;
+	font-size:75%;
+	text-align: right ;
+	font-style: italic ;
+}
 div.minorLinks {
 	text-align: right; 
-	padding-right: 20px; 
+	padding-right: 13px; 
 	padding-top: 0px;
-	margin-top: 25px; 
-	color: #000; 
-	font-size: 70%; 
+	margin-top: 20px; 
+	margin-bottom: 0px; 
+	color: #fff;
+	font-size: 80%; 
 	font-weight: normal; 
-	color: #777;
+	height: 38px;
 }
 
 div.minorLinks a {
-	color: #777;
+	color: #fff;
 }
 div.minorLinks a:hover {
-	color: #fff;
+	color: #aaa;
 }
 	
 /* NAV */
@@ -210,12 +237,13 @@ div.minorLinks a:hover {
 	list-style: none;
 }
 #nav {
-	font-weight:bold;
-	height:40px;
-	font: bold 110% arial;
-	margin: -5px 15px 0 20px;
-	text-shadow: 2px 2px 2px rgba(50,50,50,0.2);
-	float: right;
+	height:23px;
+	font-weight: bold ;
+	font-size: 90% ;
+	width: 1087px;
+	padding-top: 5px; 
+	padding-left: 15px;
+	text-transform: uppercase ;
 }
 #nav li {
 	position:relative;
@@ -229,16 +257,16 @@ div.minorLinks a:hover {
 #nav a, #nav a:link, #nav a:visited, #nav a:hover, #nav a:active {
 	text-decoration:none;
 	cursor:pointer;
-	color:#bbb;
+	color:#666;
 	display: block;
 	padding: 4px 2px 2px
 }
 #nav a:hover {
-	color:rgba(103, 153, 207, 1.0);
+	color: #A88EDB;
 }
 #nav li ul {
 	border: 1px dotted #000;
-	background-color: rgba(0, 0, 0, 0.75);
+	background-color: rgba(10,10,10,0.85) ;
 	font-size:80%;
 	margin: 0px 0px 0px -20px;
 	padding: 2px;
@@ -246,7 +274,7 @@ div.minorLinks a:hover {
 	font-weight:normal;
 	left: -999em; 
 	text-shadow: none;
-	width: 160px ;
+	width: 180px ;
 }
 #nav li:hover ul, #nav li.sfhover ul {
 	left: 0;
@@ -257,24 +285,25 @@ div.minorLinks a:hover {
 	background:none;
 	float:none;
 	border:none;
-	border: 1px solid #999;
 	border:1px none #fff;
-	padding-left:0; 
 	text-align: left; 
-	margin: 4px 0 ;
-	font-size: 95%;
+	font-size: 118%;
+	text-transform: none ;
+	line-height: 105% ;
+	background-color: rgba(0, 0, 0, 0.1) ;
+	margin: 0 ;
+}
+#nav li li:hover {
+	color:#fff;
+	background-color: rgba(168, 142, 219, 0.4) ;
 }
 #nav li li.last {
 	border-bottom:none
 }
 #nav li li a, #nav li li a:link, #nav li li a:visited, #nav li li a:hover {
 	color:#fff;
-	padding: 6px 10px 5px;
+	padding: 8px 9px;
 	min-width: 60px;
-}
-#nav li li a:hover {
-	color:#333;
-	background-color: rgba(255,255,255,0.7) ;
 }
 
 #nav li.active {
@@ -298,7 +327,28 @@ div.minorLinks a:hover {
 /* MODULE MENU */
 ul.moduleMenu {
 	list-style: none;
-	margin-left: 0px
+	margin-left: 0px ;
+	padding-left: 0px
+}
+
+ul.moduleMenu ul li {
+	list-style: none;
+	margin-left: 0px ;
+	padding-left: 0px
+}
+
+ul.moduleMenu ul {
+	list-style: none;
+	margin-left: 0px ;
+	padding-left: 0px
+}
+
+ul.moduleMenu h4 {
+	margin-top: 10px ;
+	padding-top: 20px ;
+	padding-bottom: 0px ;
+	margin-bottom: 0px ;
+	font-size: 95% ;
 }
 
 /* LINKS */
@@ -307,18 +357,18 @@ a,a:link,a:hover {
 	text-decoration:underline;
 } 
 a:link {
-	color:#666;
+	color:#866FAA;
 } 
 a:visited {
-	color:#666;
+	color:#866FAA;
 } 
-a:hover {
-	color:#3B73AF;
+a:hover,a:active {
+	color:#222;
 } 
 a.active {
 	font-weight: bold ;
 	text-decoration: underline ;
-	color: #fff;
+	color: #600;
 }
 
 a img {
@@ -328,62 +378,57 @@ a img {
 
 #footer a {
 	color: #fff ;
-	font-weight: bold ;
 	text-decoration: underline ;
 }
-#footer a:hover {
-	color: #3B73AF ;
-}
-
 
 /* TYPOGRAPHY */
 p { 
 	margin: 0px 0px 15px 0px;
-	font-family:Arial, Helvetica, sans-serif;
 	text-align: justify;
 	font-size: 13px;
 }
 ul, ol {
 	margin: 0 0 1px;
-	font-family:Arial, Helvetica, sans-serif;
 	text-align: justify;
 	font-size: 13px;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family:Arial, Helvetica, sans-serif;
-	margin: 40px 0 10px 0;
-	color:#888;
-	border-bottom: 1px dotted #888;
+	margin: 20px 0 10px 0;
+	color:#aaa;
 	background-color: none ;
 	padding: 0 0 0 0px;
 	line-height: 85%;
 	text-align: left;
+	text-transform: uppercase;
+	padding-bottom: 5px ;
+	border-bottom: 1px solid rgba(0,0,0,0.5) ;
 }
 h1 {
-	font-size: 24pt;
-	margin-top:10px;
+	font-size: 17pt;
 }
 h1.report {
-	font-size: 24pt;
-	margin-top:10px;
+	font-size: 17pt;
 }
 h2 {
-	font-size: 21pt;
+	font-size: 14pt;
 }
 #sidebar h2, div.sidebarExtra h2 {
-	font-size: 16pt;
-	margin-top:20px;
+	font-size: 14pt;
 	border-left: none ;
 	background: none ;
 }
-
 h3 {
-	font-size: 17pt;
+	font-size: 13pt;
 }
-h4, h5, h6 {
+h4 {
+	margin-top: 30px;
+	margin-bottom:10px;
+	font-size: 11pt;
+}
+h5, h6 {
 	margin-top:10px;
 	margin-bottom:10px;
-	font-size: 13pt;
+	font-size: 11pt;
 }
 
 div.blockView h1, div.blockView h2, div.blockView h3, div.blockView h4, div.blockView h5, div.blockView h6 {
@@ -402,7 +447,8 @@ div.blockView h1, div.blockView h2, div.blockView h3, div.blockView h4, div.bloc
 	font-size:11px
 }
 .date {
-	font: bold 82% arial;
+	font-weight: bold;
+	font-size: 82% ;
 	color:#bbb;
 	display:block;
 	letter-spacing: 1px
@@ -433,7 +479,7 @@ li {
 }
 
 img.logo {
-	margin-top: 10px;
+	margin: 15px 0 6px 0 ;
 }
 
 /* TABLES */
@@ -444,7 +490,7 @@ table {
 	text-shadow: none;
 	background:#333;
 	margin:0px;
-	border:#ccc 1px solid;
+	border:#666 1px solid;
 	margin: 5px 0 5px 0;
 }
 table th {
@@ -612,7 +658,6 @@ table.mceToolbar {
 td.mceIframeContainer {
 	background-color: white!important ;
 }
-
 
 /* FORMS */
 input[type="text"], input[type="password"], input[type="file"] {
@@ -792,7 +837,6 @@ div.linkTopLeft {
 	font-size: 12px;
 	margin: 15px 0px 5px 0px
 }
-
 /* IMAGES */
 img.user {
 	background-color: #ffffff ;
@@ -801,7 +845,7 @@ img.user {
 	box-shadow: 2px 2px 2px rgba(50,50,50,0.35);
 }
 
-a img.resource {
+a img.resource, img.resource {
 	background-color: #ffffff!important;
 	border: 1px solid #000000!important;
 	padding: 4px!important;
@@ -835,6 +879,32 @@ a.ui-tabs-anchor {
 
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
 	background: #666!important;
+}
+
+
+div.ui-widget-overlay {
+	background-image: none ;
+	background-color: #000!important ;
+	opacity: 0.7 ;
+}
+div.ui-dialog {
+	font-family: Helvetica, Arial, sans-serif!important;
+	font-size: 85% ;
+	border-radius: 2px; 
+}
+
+div.ui-dialog div.ui-dialog-titlebar {
+	border-radius: 2px; 
+	background-image: none ;
+	background-color: #A88EDB!important ;
+	border: none ;
+}
+
+div.ui-dialog button.ui-button {
+	font-family: Helvetica, Arial, sans-serif!important;
+	font-size: 85% ;
+	color: #333 ;
+	border-radius: 2px; 
 }
 
 /* Live Validation */
@@ -1031,6 +1101,7 @@ td.hiddenReveal, div.hiddenReveal {
 	background: none; 
 	background-color: #333;
 }
+
 
 /* Timetable styles */
 th.ttCalendarBar {
