--- a/css/main_rtl.css
+++ b/css/main_rtl.css
@@ -1,4 +1,3 @@
-<?php
 /*
 Gibbon, Flexible & Open School System
 Copyright (C) 2010, Ross Parker
@@ -15,14 +14,9 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+----
+
+Add any extra code here to make right to left languages (such as Arabic) work.
 */
 
-//This file describes the module, including database tables
-
-//Basic variables
-$name="Darkness" ;
-$description="A dark version of Gibbon's 2015 look and feel...just for dark lovely teens." ;
-$version="1.0.00" ;
-$author="Ross Parker" ;
-$url="http://rossparker.org" ;
-?>
