--- a/Darkness/css/main.css
+++ b/Darkness/css/main.css
@@ -1193,3 +1193,20 @@ div.ttPeriodCurrent {
 div#TB_ajaxContent, div#TB-title {
 	background-color: #555;
 }
+
+/* V12 NEW CLASSES */
+p.emphasis, span.emphasis {
+	font-style: italic ; 
+}
+span.small {
+	font-size: 90% ;
+}
+input.standardWidth, textarea.standardWidth {
+	width: 300px ;
+}
+select.standardWidth {
+	width: 302px ;
+}
+table.fullWidth {
+	width: 100% ;
+}
