--- a/Darkness/css/main.css
+++ b/Darkness/css/main.css
@@ -50,7 +50,7 @@ body {
 	padding-left: 1px;
 	margin: 10px auto ;
 	position:relative ;
-	border-radius: 5px; 
+	border-radius: 5px;
 	box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
 }
 #wrap-report {
@@ -65,7 +65,7 @@ body {
 	padding: 0 ;
 	height: 158px!important ;
 	background-color: rgba(20,20,20,0.65) ;
-	border-radius: 5px 5px 0 0; 
+	border-radius: 5px 5px 0 0;
 }
 #header-logo {
 	margin:0 0 0 0px;
@@ -84,11 +84,11 @@ body {
 #header-menu {
 	color:#fff;
 	font-weight:bold;
-	height: 32px!important;	
+	height: 32px!important;
 	margin: 3px 0 0 0 ;
 	background-color: rgba(0,0,0,0.9) ;
-	border-top: 1px solid rgba(150,150,150,0.25);	
-	border-bottom: 1px solid rgba(150,150,150,0.25);	
+	border-top: 1px solid rgba(150,150,150,0.25);
+	border-bottom: 1px solid rgba(150,150,150,0.25);
 }
 #header-finder {
 	float: right ;
@@ -98,7 +98,7 @@ body {
 	top:24px;
 	right:24px;
 	left:auto;
-	width:360px;	
+	width:360px;
 }
 #header-finder h2 {
 	text-align: right ;
@@ -109,25 +109,25 @@ body {
 }
 
 #content-wrap {
-	width:1102px; 
+	width:1102px;
 	background-color: rgba(0,0,0,0.65) ;
-	margin: 0 0 0 -1px;	
+	margin: 0 0 0 -1px;
 }
 #content-wrap-report {
 	background-color: rgba(255,255,255,0.9) ;
 	position:relative;
-	width:100%; 
+	width:100%;
 }
 #content {
 	margin: 0 0 0 -1px;
 	padding: 0 25px 0 25px;
 	min-height: 470px;
 	width: 752px;
-	max-width: 752px!important; 
+	max-width: 752px!important;
 	position:relative;
     overflow:hidden;
     float:left;
-	border-right: 1px solid rgba(0,0,0,0.15);	
+	border-right: 1px solid rgba(0,0,0,0.15);
 }
 #content-wide {
 	margin: 0 0 0 -1px;
@@ -140,18 +140,18 @@ body {
 #content div.trail {
 	text-align: left;
 	font-size: 70%;
-	margin: 10px 0px 10px -18px; 
+	margin: 10px 0px 10px -18px;
 	height: 16px;
 	padding-top: 7px;
 	padding-left: 20px;
 	font-weight: normal;
 	width: 783px;
-	color: #3B73AF ;	
+	color: #3B73AF ;
 }
 #content-wide div.trail {
 	text-align: left;
 	font-size: 70%;
-	margin: 10px 0px 10px -18px; 
+	margin: 10px 0px 10px -18px;
 	height: 16px;
 	padding-top: 7px;
 	padding-left: 20px;
@@ -166,14 +166,15 @@ div.trailEnd {
 }
 div.trailHead {
 	float: left;
+	white-space: nowrap;
 }
 div.trailHead a {
-	text-decoration: underline; 
+	text-decoration: underline;
 	font-weight: normal;
 	color: #3B73AF;
 }
 div.trailHead a:hover {
-	text-decoration: underline; 
+	text-decoration: underline;
 	font-weight: normal;
 	color: #c00;
 }
@@ -191,9 +192,9 @@ div.sidebarExtra {
 }
 #footer {
 	clear:both;
-	width:1102px; 
+	width:1102px;
 	background-color: rgba(20,20,20,0.8) ;
-	margin: 0 0 0 -1px;	
+	margin: 0 0 0 -1px;
 	padding: 20px 0px 10px 0px;
 	font-size:85%;
 	color:#fff;
@@ -203,23 +204,23 @@ div.sidebarExtra {
 }
 #footer-report {
 	clear:both;
-	width:750px; 
+	width:750px;
 	color: #333;
-	margin: 0 0 0 -1px;	
+	margin: 0 0 0 -1px;
 	padding: 5px 0px 5px 0px;
 	font-size:75%;
 	text-align: right ;
 	font-style: italic ;
 }
 div.minorLinks {
-	text-align: right; 
-	padding-right: 13px; 
+	text-align: right;
+	padding-right: 13px;
 	padding-top: 0px;
-	margin-top: 20px; 
-	margin-bottom: 0px; 
+	margin-top: 20px;
+	margin-bottom: 0px;
 	color: #fff;
-	font-size: 80%; 
-	font-weight: normal; 
+	font-size: 80%;
+	font-weight: normal;
 }
 img.minorLinkIcon {
 	height: 38px ;
@@ -236,7 +237,7 @@ div.minorLinks a {
 div.minorLinks a:hover {
 	color: #aaa;
 }
-	
+
 /* NAV */
 #nav, #nav ul {
 	padding: 0;
@@ -248,7 +249,7 @@ div.minorLinks a:hover {
 	font-weight: bold ;
 	font-size: 90% ;
 	width: 1087px;
-	padding-top: 5px; 
+	padding-top: 5px;
 	padding-left: 15px;
 	text-transform: uppercase ;
 }
@@ -279,7 +280,7 @@ div.minorLinks a:hover {
 	padding: 2px;
 	position: absolute;
 	font-weight:normal;
-	left: -999em; 
+	left: -999em;
 	text-shadow: none;
 	width: 180px ;
 }
@@ -293,7 +294,7 @@ div.minorLinks a:hover {
 	float:none;
 	border:none;
 	border:1px none #fff;
-	text-align: left; 
+	text-align: left;
 	font-size: 118%;
 	text-transform: none ;
 	line-height: 105% ;
@@ -314,8 +315,8 @@ div.minorLinks a:hover {
 }
 
 #nav li.active {
-	background: none; 
-	color: #ffffff; 
+	background: none;
+	color: #ffffff;
 	border: 1px none #c00
 }
 #nav li.active ul {
@@ -362,16 +363,16 @@ ul.moduleMenu h4 {
 a,a:link,a:hover {
 	background:transparent;
 	text-decoration:underline;
-} 
+}
 a:link {
 	color:#866FAA;
-} 
+}
 a:visited {
 	color:#866FAA;
-} 
+}
 a:hover,a:active {
 	color:#222;
-} 
+}
 a.active {
 	font-weight: bold ;
 	text-decoration: underline ;
@@ -389,7 +390,7 @@ a img {
 }
 
 /* TYPOGRAPHY */
-p { 
+p {
 	margin: 0px 0px 15px 0px;
 	text-align: justify;
 	font-size: 13px;
@@ -549,7 +550,7 @@ table tr.even td {
 }
 table tr:last-child td {
 	border-bottom:0;
-	
+
 }
 table tr:last-child td:first-child {
 	-moz-border-radius-bottomleft:3px;
@@ -582,7 +583,7 @@ tr.current, tr.current td, div.current {
 tr.past, tr.past td, div.past {
 	background-color: #F6CECB!important ;
 	background: -webkit-gradient(linear, left top, left bottom, from(#F8D1CD), to(#F6CECB))!important;
-	background: -moz-linear-gradient(top,  #F8D1CD,  #F6CECB)!important;	
+	background: -moz-linear-gradient(top,  #F8D1CD,  #F6CECB)!important;
 }
 tr.error, tr.error td, div.error {
 	background-color: #F6CECB!important ;
@@ -664,7 +665,7 @@ tr.mceFirst td {
 table.mceToolbar {
 	box-shadow:none!important;
 	-moz-box-shadow:none!important;
-	-webkit-box-shadow:none!important;	
+	-webkit-box-shadow:none!important;
 }
 td.mceIframeContainer {
 	background-color: white!important ;
@@ -761,30 +762,30 @@ input[type="reset"] {
 }
 
 input[type="submit"].buttonLink {
-	background: none; 
-	color: #fff; 
-	border: none; 
+	background: none;
+	color: #fff;
+	border: none;
 	font-family:Arial, Helvetica, sans-serif;
-	font-weight: normal; 
-	font-size: 13px; 
+	font-weight: normal;
+	font-size: 13px;
 	text-decoration: underline;
 	height: 28px;
 }
 
 input[type="submit"].buttonLink:hover {
-	background: none; 
-	color: #069; 
-	border: none; 
+	background: none;
+	color: #069;
+	border: none;
 	font-family:Arial, Helvetica, sans-serif;
-	font-weight: normal; 
-	font-size: 13px; 
+	font-weight: normal;
+	font-size: 13px;
 }
 
 
 /* MESSAGES */
 div.message {
 	border: 1px solid #3B73AF;
-	color: #3B73AF; 
+	color: #3B73AF;
 	background-color: #D0EAFD;
 	font-size: 12px;
 	padding: 5px;
@@ -792,7 +793,7 @@ div.message {
 	box-shadow: 2px 2px 2px rgba(50,50,50,0.4);
 }
 div.message a {
-	color: #3B73AF; 
+	color: #3B73AF;
 }
 div.message a:hover {
 	color: #c00 ;
@@ -801,7 +802,7 @@ div.message a:hover {
 div.error {
 	border: 1px solid #CC0000;
 	border-left: 6px solid #CC0000;
-	color: #CC0000; 
+	color: #CC0000;
 	background-color: #333;
 	font-size: 12px;
 	padding: 10px;
@@ -811,7 +812,7 @@ div.error {
 div.warning {
 	border: 1px solid #D65602;
 	border-left: 6px solid #D65602;
-	color: #D65602; 
+	color: #D65602;
 	background-color: #333;
 	font-size: 12px;
 	padding: 10px;
@@ -820,7 +821,7 @@ div.warning {
 }
 div.info {
 	border-left: 6px solid #06C;
-	color: #06C; 
+	color: #06C;
 	background-color: #333;
 	font-size: 12px;
 	padding: 10px;
@@ -830,7 +831,7 @@ div.info {
 div.success {
 	border: 1px solid #390;
 	border-left: 6px solid #390;
-	color: #390; 
+	color: #390;
 	background-color: #333;
 	font-size: 12px;
 	padding: 10px;
@@ -861,7 +862,7 @@ div.linkTopLeft {
 img.user {
 	background-color: #ffffff ;
 	border: 1px solid #000000 ;
-	padding: 4px ; 
+	padding: 4px ;
 	box-shadow: 2px 2px 2px rgba(50,50,50,0.35);
 }
 
@@ -874,12 +875,12 @@ a img.resource, img.resource {
 /* jQueryUI Tweaks */
 .ui-widget-content {
 	border: none!important;
-}	
+}
 .ui-tabs-panel {
 	border: 1px solid rgb(238, 238, 238)!important;
-}	
+}
 .ui-tabs {
-	padding: 0px!important;	
+	padding: 0px!important;
 	background: none!important;
 }
 .ui-tabs-active {
@@ -910,11 +911,11 @@ div.ui-widget-overlay {
 div.ui-dialog {
 	font-family: Helvetica, Arial, sans-serif!important;
 	font-size: 85% ;
-	border-radius: 2px; 
+	border-radius: 2px;
 }
 
 div.ui-dialog div.ui-dialog-titlebar {
-	border-radius: 2px; 
+	border-radius: 2px;
 	background-image: none ;
 	background-color: #A88EDB!important ;
 	border: none ;
@@ -924,7 +925,7 @@ div.ui-dialog button.ui-button {
 	font-family: Helvetica, Arial, sans-serif!important;
 	font-size: 85% ;
 	color: #333 ;
-	border-radius: 2px; 
+	border-radius: 2px;
 }
 
 /* Live Validation */
@@ -939,7 +940,7 @@ div.ui-dialog button.ui-button {
 .LV_valid {
     color:#00CC00;
 }
-	
+
 .LV_invalid {
     color:#CC0000;
 }
@@ -1055,14 +1056,14 @@ div#tabs {
 }
 
 .ui-autocomplete .ui-menu-item, .ui-autocomplete .ui-menu-item:hover {
-	border: none!important; 
+	border: none!important;
 	border-radius: 0!important ;
 }
 
 .ui-autocomplete .ui-corner-all, .ui-autocomplete .ui-corner-all:hover {
 	color: #fff!important ;
 	background: rgba(25, 25, 25, 0.9)!important;
-	border: none!important; 
+	border: none!important;
 	border-radius: 0!important ;
 }
 
@@ -1118,77 +1119,77 @@ ul.token-input-list-facebook input {
 }
 
 td.hiddenReveal, div.hiddenReveal {
-	background: none; 
+	background: none;
 	background-color: #333;
 }
 
 
 /* Timetable styles */
 th.ttCalendarBar {
-	vertical-align: top; 
-	width: 100%; 
-	text-align: right!important; 
-	background-image: none!important; 
+	vertical-align: top;
+	width: 100%;
+	text-align: right!important;
+	background-image: none!important;
 	background-color: #333!important
 }
 span.ttSchoolCalendar {
 	color: #fff;
-	font-weight: bold; 
-	margin: 0px -2px 0px 5px; 
-	background-color: rgb(51,153,0); 
-	padding: 5px 7px; 
+	font-weight: bold;
+	margin: 0px -2px 0px 5px;
+	background-color: rgb(51,153,0);
+	padding: 5px 7px;
 	border: 1px solid #555
 }
 div.ttSchoolCalendar {
 	background-color: rgb(51,153,0) ;
-	color: #fff; 
+	color: #fff;
 	font-weight: bold ;
 }
 span.ttPersonalCalendar {
 	color: #fff;
-	font-weight: bold; 
-	margin: 0px -2px 0px 5px; 
-	background-color: rgb(103,153,207); 
-	padding: 5px 7px; 
+	font-weight: bold;
+	margin: 0px -2px 0px 5px;
+	background-color: rgb(103,153,207);
+	padding: 5px 7px;
 	border: 1px solid #555;
 }
 div.ttPersonalCalendar {
-	background-color: rgb(103,153,207); 
-	color: #fff; 
+	background-color: rgb(103,153,207);
+	color: #fff;
 	font-weight: bold ;
 }
 span.ttSpaceBookingCalendar {
 	color: #fff;
-	font-weight: bold; 
-	margin: 0px -2px 0px 5px; 
-	background-color: #E5760D; 
-	padding: 5px 7px; 
+	font-weight: bold;
+	margin: 0px -2px 0px 5px;
+	background-color: #E5760D;
+	padding: 5px 7px;
 	border: 1px solid #555;
 }
 div.ttSpaceBookingCalendar {
-	background-color: #E5760D; 
-	color: #fff; 
+	background-color: #E5760D;
+	color: #fff;
 	font-weight: bold ;
 }
 div.ttClosure {
 	border: 1px solid rgb(136,136,136);
 	background-color: #AA7278;
-	color: #fff; 
+	color: #fff;
 	border: 1px solid rgb(136,136,136) ;
 }
 div.ttGeneric {
 	background-color: #000;
-	color: #bbb; 
+	color: #bbb;
 	border: 1px solid rgb(136,136,136) ;
 }
 div.ttCurrent {
 	background-color: rgb(179,239,194) ;
-	color: rgb(0,0,0); 
+	color: rgb(0,0,0);
 	border: 1px solid rgb(136,136,136) ;
 }
 div.ttLesson {
 	background-color: #000;
-	color: #bbb; 
+	color: #bbb;
 	border: 1px solid rgb(136,136,136) ;
 }
 div.ttPeriod {
@@ -1209,7 +1210,7 @@ div#TB_ajaxContent, div#TB-title {
 
 /* V12 NEW CLASSES */
 p.emphasis, span.emphasis {
-	font-style: italic ; 
+	font-style: italic ;
 }
 span.small {
 	font-size: 90% ;
