--- a/Darkness/css/main.css
+++ b/Darkness/css/main.css
@@ -346,7 +346,8 @@ ul.moduleMenu {
 ul.moduleMenu ul li {
 	list-style: none;
 	margin-left: 0px ;
-	padding-left: 0px
+	padding-left: 0px;
+	text-align: left;
 }
 
 ul.moduleMenu ul {
@@ -496,17 +497,20 @@ img.logo {
 
 /* TABLES */
 table {
-	font-family:Arial, Helvetica, sans-serif;
 	color:#fff;
 	font-size:12px;
 	text-shadow: none;
 	background:#333;
 	margin:0px;
 	border:#666 1px solid;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
 	margin: 5px 0 5px 0;
 }
 table th {
 	padding:15px 15px 15px 15px;
+	border-top:1px solid #e0e0e0;
 	border-bottom:1px solid #e0e0e0;
 	font-size: 110% ;
 	background: #333;
@@ -542,6 +546,7 @@ table td:last-child {
 table td {
 	text-align: left;
 	padding:12px;
+	border-top: 1px solid #dfdfdf;
 	border-bottom:1px solid #dfdfdf;
 	background: #333;
 	background: -webkit-gradient(linear, left top, left bottom, from(#333), to(#383838));
