--- a/Darkness/css/main.css
+++ b/Darkness/css/main.css
@@ -200,8 +200,8 @@ div.sidebarExtra {
 	font-size:85%;
 	color:#fff;
 	text-align: center ;
+	background-color: rgba(50,50,50,0.6) ;
 	line-height: 135% ;
-	max-height: 120px ;
 }
 #footer-report {
 	clear:both;
@@ -340,7 +340,7 @@ div.minorLinks a:hover {
 ul.moduleMenu {
 	list-style: none;
 	margin-left: 0px ;
-	padding-left: 0px
+	padding-left: 0px;
 }
 
 ul.moduleMenu ul li {
@@ -548,6 +548,7 @@ table td {
 	padding:12px;
 	border-top: 1px solid #dfdfdf;
 	border-bottom:1px solid #dfdfdf;
+	border-left: 1px solid #dfdfdf;
 	background: #333;
 	background: -webkit-gradient(linear, left top, left bottom, from(#333), to(#383838));
 	background: -moz-linear-gradient(top,  #333,  #383838);
@@ -603,10 +604,6 @@ tr.warning, tr.warning td, div.warning, td.warning {
 	background: none!important ;
 	background-color: #FFD2A9!important ;
 }
-tr.info, tr.info td, div.info, td.info {
-	background: none!important ;
-	background-color: #333!important ;
-}
 tr.dull, tr.dull td, div.dull, td.dull {
 	background: none!important ;
 	background-color: #c6c6c6!important ;
@@ -623,16 +620,9 @@ table.noIntBorder td {
 table.noIntBorder td:last-child {
 	text-align: left;
 }
-table.smallIntBorder {
-	border: 1px solid #888 ;
-}
 table.smallIntBorder td {
 	border-left: none!important ;
-	border-bottom: 1px solid #888 ;
 	padding: 5px!important ;
-	background: #333;
-	background: -webkit-gradient(linear, left top, left bottom, from(#333), to(#383838));
-	background: -moz-linear-gradient(top,  #333,  #383838);
 }
 table.smallIntBorder td:last-child {
 	text-align: left;
@@ -680,6 +670,7 @@ td.mceIframeContainer {
 	background-color: white!important ;
 }
 
+
 /* FORMS */
 input[type="text"], input[type="password"], input[type="file"] {
 	border: 1px solid #BFBFBF;
@@ -690,10 +681,16 @@ input[type="text"], input[type="password"], input[type="file"] {
 	font-size: 13px ;
 	padding: 2px ;
 	color: #fff;
+	box-sizing: border-box;
+}
 }
 
-input[readonly] {
-	border: none ;
+input[type="text"], input[type="password"] {
+    padding-left: 4px;
+}
+
+input[readonly], textarea[readonly], select[readonly] {
+	border: none;
 	background: none;
 }
 
@@ -704,6 +701,8 @@ textarea {
 	margin-left: 5px ;
 	font-size: 13px ;
 	color: #fff;
+    	box-sizing: border-box;
+    	padding: 4px;
 }
 
 select {
@@ -711,12 +710,9 @@ select {
 	background-color: #666 ;
 	height: 30px;
 	float:right;
+	margin-left: 5px ;
 	font-size: 13px ;
-	color: #fff;
-}
-
-select option {
-	background-color: #666 ;
+    	box-sizing: border-box;
 	color: #fff;
 }
 
@@ -754,11 +750,6 @@ input[type="submit"] {
 	font-size: 13px ;
 }
 
-input[type="submit"]:hover {
-	border: 1px solid #3B73AF;
-	color: #3B73AF;
-}
-
 input[type="reset"] {
 	border: 1px solid #222222;
 	background-color: #eeeeee;
@@ -778,7 +769,6 @@ input[type="submit"].buttonLink {
 	background: none;
 	color: #fff;
 	border: none;
-	font-family:Arial, Helvetica, sans-serif;
 	font-weight: normal;
 	font-size: 13px;
 	text-decoration: underline;
@@ -789,7 +779,6 @@ input[type="submit"].buttonLink:hover {
 	background: none;
 	color: #069;
 	border: none;
-	font-family:Arial, Helvetica, sans-serif;
 	font-weight: normal;
 	font-size: 13px;
 }
@@ -832,15 +821,6 @@ div.warning {
 	margin: 10px 0px 15px 0px;
 	box-shadow: 2px 2px 2px rgba(50,50,50,0.3);
 }
-div.info {
-	border-left: 6px solid #06C;
-	color: #06C;
-	background-color: #333;
-	font-size: 12px;
-	padding: 10px;
-	margin: 10px 0px 15px 0px;
-	box-shadow: 2px 2px 2px rgba(50,50,50,0.15);
-}
 div.success {
 	border: 1px solid #390;
 	border-left: 6px solid #390;
@@ -871,6 +851,7 @@ div.linkTopLeft {
 	font-size: 12px;
 	margin: 15px 0px 5px 0px
 }
+
 /* IMAGES */
 img.user {
 	background-color: #ffffff ;
@@ -945,6 +926,10 @@ div.ui-dialog button.ui-button {
 	border-radius: 2px;
 }
 
+div#ui-datepicker-div {
+	z-index: 1000!important;
+}
+
 /* Live Validation */
 
 .LV_validation_message{
@@ -962,7 +947,7 @@ div.ui-dialog button.ui-button {
     color:#CC0000;
 }
 
-//From WP for tinymce display
+/* From WP for tinymce display */
 .zerosize{height:0;width:0;margin:0;border:0;padding:0;overflow:hidden;position:absolute;}
 a.edButtonPreview,a.edButtonHTML{height:18px;margin:5px 5px 0 0;padding:4px 5px 2px;float:right;cursor:pointer;border-width:1px;border-style:solid;-moz-border-radius:3px 3px 0 0;-webkit-border-top-right-radius:3px;-webkit-border-top-left-radius:3px;-khtml-border-top-right-radius:3px;-khtml-border-top-left-radius:3px;border-top-right-radius:3px;border-top-left-radius:3px;}
 #editorcontainer{border-color:#ccc #ccc #dfdfdf;}
@@ -1120,26 +1105,10 @@ div.ui-datepicker-header {
 	border: none ;
 }
 
-ul.token-input-list-facebook {
-	border: 1px solid #BFBFBF!important;
-	background-color: #666!important ;
-	color: #fff!important;
-	background-image: none!important;
-}
-
-ul.token-input-list-facebook li {
-	background-color: #666!important ;
-}
-
-ul.token-input-list-facebook input {
-	background-color: #666!important ;
-}
-
 td.hiddenReveal, div.hiddenReveal {
 	background: none;
 	background-color: #333;
 }
-
 
 /* Timetable styles */
 th.ttCalendarBar {
@@ -1218,8 +1187,6 @@ div.ttPeriodCurrent {
 	color: rgb(0,0,0);
 	border: 1px solid rgb(136,136,136) ;
 	background-color: #339900!important ;
-	background: -webkit-gradient(linear, left top, left bottom, from(#339900), to(#2E8400))!important;
-	background: -moz-linear-gradient(top,  #339900,  #2E8400)!important;
 }
 div#TB_ajaxContent, div#TB-title {
 	background-color: #555;
@@ -1262,8 +1229,7 @@ div.resourceAddSlider {
 	margin-bottom: -5px
 }
 
-
-/* V12 NEW CLASSES */
+/* v12 NEW CLASSES */
 p.emphasis, span.emphasis {
 	font-style: italic ;
 }
@@ -1291,11 +1257,11 @@ table.colorOddEven tr:nth-of-type(even) td {
 	background: linear-gradient(center top , #F2F2F2, #F0F0F0);
 }
 
-/* V13 NEW CLASSES */
+/* v13 NEW CLASSES */
 td.wordWrap {
 	overflow-wrap: break-word;
   	word-wrap: break-word;
-  	word-break: break-word;
+  	word-break: break-word !important;
 }
 div.notificationTray {
 	float: right;
@@ -1313,4 +1279,163 @@ div.notificationTray a.inactive {
 	color: #C0C0C0;
 	cursor: default;
 	text-decoration: none;
+}
+
+/* v14 NEW CLASSES */
+
+/* Ensure forms leave enough room in the second column for LiveValidation to fit. Updated to fix nested tables in forms. */
+table.standardForm td.standardWidth:last-child:nth-child(2) {
+	min-width: 450px;
+}
+
+select[multiple] {
+	height: auto;
+	max-height: 130px;
+}
+
+.shortWidth {
+	width: 148px;
+}
+
+.mediumWidth {
+	width: 230px;
+}
+
+.phoneNumber input {
+	width: 160px;
+}
+
+.phoneNumber select[name$="CountryCode"] {
+	width: 60px;
+}
+
+.phoneNumber select[name$="Type"] {
+	width: 70px;
+}
+
+.column div:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column.inline div {
+	display:inline-block;
+	width:auto;
+}
+
+.column.stacked div:not(:last-of-type) {
+    margin-bottom: 10px;
+}
+
+.formTable input,
+.formTable select,
+.formTable textarea {
+	float: left;
+	margin-left: 0px;
+}
+
+
+table tr.heading td {
+	padding:15px 5px 15px 5px !important;
+	border-top:1px solid #fafafa;
+	border-bottom:1px solid #e0e0e0;
+	font-size: 110% !important;
+	font-weight: bold;
+	background: #ebebeb;
+	background: -webkit-gradient(linear, left top, left bottom, from(#ebebeb), to(#dfdfdf));
+	background: -moz-linear-gradient(top,  #ebebeb,  #dfdfdf);
+	text-align: left;
+}
+
+table tr.heading:first-child td:first-child {
+	-moz-border-radius-topleft:3px;
+	-webkit-border-top-left-radius:3px;
+	border-top-left-radius:3px;
+	text-align: left;
+	padding-left: 15px !important;
+}
+
+table tr.heading:first-child td:last-child {
+	-moz-border-radius-topright:3px;
+	-webkit-border-top-right-radius:3px;
+	border-top-right-radius:3px;
+	padding-left: 5px !important;
+}
+
+/* Usability tweak to make large data tables like User Permissions easier to read */
+table.rowHighlight tr:not(.break):hover td {
+	background: #EDF7FF !important;
+}
+
+/* Unfloat validation preceded by a phone input, adjust line height for vertical alignment */
+input[name*="phone"] ~ .LV_invalid {
+    float: none;
+    line-height: 30px;
+}
+
+/* Hide validation preceded by another validation message in the same parent element */
+.LV_invalid ~ .LV_invalid {
+    display: none;
+}
+
+/* Remove the tiny gap that appears near validation elements */
+.LV_valid:empty, .LV_invalid:empty {
+    margin: 0;
+}
+
+/* v15 NEW CLASSES */
+.input-box {
+	float: right;
+	display: table;
+	border: 1px solid #BFBFBF;
+	background-color: #ffffff;
+    box-sizing: border-box;
+}
+
+.input-box .inline-label {
+	display:table-cell;
+	padding: 5px;
+	text-align:left;
+	vertical-align:middle;
+	word-break: break-all;
+}
+
+.input-box .inline-button {
+	display:table-cell;
+	border-left: 1px solid #BFBFBF;
+	background: #fafafa;
+	background: -moz-linear-gradient(top, #fbfbfb, #fafafa);
+	width:48px;
+	height:48px;
+	vertical-align:middle;
+	text-align:center;
+	cursor: pointer;
+}
+
+.input-box ~ .input-box {
+	border-top-width: 0px;
+}
+
+.input-box-meta {
+	float: right;
+	line-height: 22px;
+}
+
+.floatNone {
+	float:none;
+}
+
+.max-upload {
+    font-style: italic;
+	color: #c00;
+    font-size: 11px;
+}
+
+
+#content .smallIntBorder {
+  max-width: 752px;
+}
+#content-wide .smallIntBorder {
+  max-width: 1052px;
 }
