--- a/Darkness/css/main.css
+++ b/Darkness/css/main.css
@@ -1386,7 +1386,8 @@ table tr.heading:first-child td:last-child {
 }
 
 /* Usability tweak to make large data tables like User Permissions easier to read */
-table.rowHighlight tr:not(.break):hover td {
+table.rowHighlight tr:not(.break):hover td,
+table.columnHighlight .hover:not(:first-child) {
 	background: #EDF7FF !important;
 }
 
@@ -1449,7 +1450,7 @@ input[name*="phone"] ~ .LV_invalid {
 }
 
 .floatNone {
-	float:none;
+	float:none!important;
 }
 
 .max-upload {
@@ -1463,6 +1464,10 @@ input[name*="phone"] ~ .LV_invalid {
 }
 #content-wide .smallIntBorder {
   max-width: 1052px;
+}
+
+.matchHighlight table {
+    float: right;
 }
 
 .matchHighlight > td {
@@ -1524,7 +1529,7 @@ fieldset {
 }
 
 /* Fixes an odd colspan-related width bug in Chrome */
-td.fullWidth {
+td.fullWidth[colspan] {
     width: auto;
 }
 
