--- a/Darkness/css/main.css
+++ b/Darkness/css/main.css
@@ -213,6 +213,12 @@ div.sidebarExtra {
 	text-align: right ;
 	font-style: italic ;
 }
+#footer-logo {
+	z-index: 9999;
+	margin-top: -82px;
+	margin-left: 850px;
+	opacity: 0.8;
+}
 div.minorLinks {
 	text-align: right;
 	padding-right: 13px;
@@ -284,13 +290,13 @@ div.minorLinks a:hover {
 	padding: 2px;
 	position: absolute;
 	font-weight:normal;
-	left: -999em;
 	text-shadow: none;
-	width: 180px ;
+    width: 180px ;
+    display: none;
 }
 #nav li:hover ul, #nav li.sfhover ul {
-	left: 0;
-	z-index:99999;
+    z-index:99999;
+    display: block;
 }
 
 #nav li li {
@@ -630,14 +636,14 @@ table.smallIntBorder td {
 table.smallIntBorder td:last-child {
 	text-align: left;
 }
-table.smallIntBorder tr.break td {
+tr.break td {
 	background: none!important;
 }
-table.smallIntBorder tr.break td h3 {
+tr.break h3, tr.break h4 {
 	margin-top: 10px!important;
 	padding: 0;
 }
-table.smallIntBorder h3, table.smallIntBorder h4 {
+tr h3, tr h4 {
 	border: none!important;
 }
 table.mini td {
@@ -681,9 +687,8 @@ input[type="text"], input[type="password"], input[type="file"] {
 	background-color: #666 ;
 	height: 28px;
 	float:right;
-	margin-left: 5px ;
+	margin-left: 4px ;
 	font-size: 13px ;
-	padding: 2px ;
 	color: #fff;
 	box-sizing: border-box;
 }
@@ -707,7 +712,7 @@ textarea {
 	border: 1px solid #BFBFBF;
 	background-color: #666 ;
 	float:right;
-	margin-left: 5px ;
+	margin-left: 4px ;
 	font-size: 13px ;
 	color: #fff;
     	box-sizing: border-box;
@@ -717,9 +722,9 @@ textarea {
 select {
 	border: 1px solid #BFBFBF;
 	background-color: #666 ;
-	height: 30px;
+	height: 28px;
 	float:right;
-	margin-left: 5px ;
+	margin-left: 4px ;
 	font-size: 13px ;
     	box-sizing: border-box;
 	color: #fff;
@@ -774,7 +779,8 @@ input[type="submit"]:hover {
 	color: #eeeeee;
 }
 
-input[type="submit"].buttonLink {
+input[type="submit"].buttonLink,
+input[type="button"].buttonLink {
 	background: none;
 	color: #fff;
 	border: none;
@@ -784,7 +790,9 @@ input[type="submit"].buttonLink {
 	height: 28px;
 }
 
-input[type="submit"].buttonLink:hover {
+input[type="submit"].buttonLink:hover,
+input[type="button"].buttonLink:hover {
+	cursor: pointer;
 	background: none;
 	color: #069;
 	border: none;
@@ -795,13 +803,13 @@ input[type="submit"].buttonLink:hover {
 
 /* MESSAGES */
 div.message {
-	border: 1px solid #3B73AF;
+	border-left: 6px solid #3B73AF;
 	color: #3B73AF;
 	background-color: #D0EAFD;
 	font-size: 12px;
-	padding: 5px;
-	margin: 10px 0px 5px 0px;
-	box-shadow: 2px 2px 2px rgba(50,50,50,0.4);
+	padding: 10px;
+	margin: 10px 0px 15px 0px;
+	box-shadow: 2px 2px 2px rgba(50,50,50,0.15);
 }
 div.message a {
 	color: #3B73AF;
@@ -835,7 +843,16 @@ div.success {
 	font-size: 12px;
 	padding: 10px;
 	margin: 10px 0px 15px 0px;
-	box-shadow: 2px 2px 2px rgba(50,50,50,0.3);
+	box-shadow: 2px 2px 2px rgba(50,50,50,0.15);
+}
+div.exception {
+	border-left: 6px solid #444;
+	color: #444;
+	background-color: #f9f9f9;
+	font-size: 12px;
+	padding: 10px;
+	margin: 10px 0px 15px 0px;
+	box-shadow: 2px 2px 2px rgba(50,50,50,0.15);
 }
 
 div.paginationTop {
@@ -850,8 +867,8 @@ div.paginationBottom {
 }
 div.linkTop {
 	text-align: right;
-	font-size: 12px;
-	margin: 15px 0px 5px 0px
+    font-size: 12px;
+    margin: 15px 0px 5px 0px;
 }
 div.linkTopLeft {
 	text-align: left;
@@ -943,7 +960,7 @@ div#ui-datepicker-div {
     font-weight:bold;
     margin:6px 0px 0px 5px;
     float:right;
-    text-align: right;
+	text-align: right;
 	font-size: 12px;
 }
 
@@ -1113,7 +1130,7 @@ div.ui-datepicker-header {
 	border: none ;
 }
 
-td.hiddenReveal, div.hiddenReveal {
+td.hiddenReveal, div.hiddenReveal, tr.hiddenReveal td {
 	background: none;
 	background-color: #333;
 }
@@ -1219,6 +1236,10 @@ table.chatBox tr td {
 	padding: 1px 4px
 }
 
+.ttToday {
+        background:#fefedd;
+}
+
 /* TAG CLOUD STYLE */
 .tag_cloud { padding: 3px; text-decoration: none; }
 .tag_cloud:link { color: #6799CF; text-decoration: none }
@@ -1242,9 +1263,10 @@ p.emphasis, span.emphasis {
 	font-style: italic ;
 }
 span.small {
-	font-size: 90% ;
+	font-size: 93% ;
 }
-input.standardWidth, textarea.standardWidth, select.standardWidth, div.standardWidth {
+
+input.standardWidth, textarea.standardWidth, select.standardWidth, div.standardWidth, table.standardWidth {
 	width: 300px ;
 }
 .fullWidth {
@@ -1257,7 +1279,7 @@ h1.bigTop, h2.bigTop, h3.bigTop, h4.bigTop, h5.bigTop, h6.bigTop {
 	margin-top: 50px!important;
 }
 
-table.colorOddEven tr:nth-of-type(even) td {
+table.colorOddEven tr:nth-of-type(even) > td {
 	background: -webkit-gradient(linear, center top, center bottom, from(#F2F2F2), to(#F0F0F0));
 	background: -webkit-linear-gradient(center top , #F2F2F2, #F0F0F0);
 	background: -o-linear-gradient(center top , #F2F2F2, #F0F0F0);
@@ -1303,7 +1325,6 @@ table.standardForm td.standardWidth:last-child:nth-child(2) {
 
 select[multiple] {
 	height: auto;
-	max-height: 130px;
 }
 
 .shortWidth {
@@ -1326,6 +1347,10 @@ select[multiple] {
 	width: 70px;
 }
 
+.phoneNumber .phoneInputs {
+    position: relative;
+}
+
 .column > div:after {
   content: "";
   display: table;
@@ -1339,7 +1364,7 @@ select[multiple] {
 .column.inline div {
 	display:inline-block;
 	width:auto;
-	vertical-align: middle;
+    vertical-align: middle;
 }
 
 .column.stacked div:not(:last-of-type) {
@@ -1394,7 +1419,10 @@ table.columnHighlight .hover:not(:first-child) {
 /* Unfloat validation preceded by a phone input, adjust line height for vertical alignment */
 input[name*="phone"] ~ .LV_invalid {
     float: none;
-    line-height: 30px;
+    position: absolute;
+    left: calc(-100% - 6px);
+    text-align: right;
+    width: 100%;
 }
 
 /* Hide validation preceded by another validation message in the same parent element */
@@ -1445,8 +1473,12 @@ input[name*="phone"] ~ .LV_invalid {
 	line-height: 22px;
 }
 
+.floatLeft {
+	float: left!important;
+}
+
 .floatRight {
-	float: right;
+	float: right!important;
 }
 
 .floatNone {
@@ -1535,14 +1567,311 @@ td.fullWidth[colspan] {
 
 /* Utility classes - will be part of the larger css refactor soon */
 .noMargin {
-    margin: 0 !important; 
+    margin: 0 !important;
 }
 
 .noPadding,
 table.smallIntBorder td.noPadding {
-    padding: 0!important; 
+    padding: 0!important;
 }
 
 .noBorder {
-    border: 0!important; 
+    border: 0!important;
+}
+
+/* CUSTOM BLOCKS v16 */
+.customBlocks .sortHighlight {
+    margin-bottom: 5px;
+    min-height: 80px;
+    line-height: 1.2em;
+    width: 100%;
+    border: 1px solid #fcd3a1;
+    background: #fbf8ee;
+    color: #444444;
+}
+
+.customBlocks .sortHandle {
+    width: 2px;
+    height: 70px;
+    margin: 5px;
+    border-color: #c7dae9;
+    border-style: dotted;
+    border-width: 0px 3px 0px 3px;
+    cursor: move;
+}
+
+.blockPlaceholder {
+    color: #ddd;
+    font-size: 230%;
+    padding: 15px 0 15px 6px;
+}
+
+.blockTemplate {
+    overflow:hidden;
+    background: #EDF7FF;
+    border: 1px solid #d8dcdf;
+    margin: 0 0 5px;
+}
+
+.blockTemplate.ui-sortable-helper {
+	max-height: 80px !important;
+}
+
+.blockSidebar {
+    width: 8%;
+}
+
+.blockInputs {
+    width:88%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.blockInputs input, .blockInputs textarea, .blockInputs select {
+    border: 1px solid #BFBFBF;
+    font-style: italic;
+}
+
+.blockInputs .readonly {
+    color: #222222;
+    border: 1px dotted #aaa;
+    background: none;
+}
+
+.blockInputs select.readonly {
+    pointer-events: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.blockInputs .title {
+    font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+/* v16 NEW CLASSES */
+
+.displayNone {
+    display: none;
+}
+
+tr.selected, tr.selected td, div.selected, td.selected {
+    background: none!important ;
+    background-color: #e2ccf6!important ;
+    border-bottom-color: #d2b8ec;
+    border-top-color: #f7edff;
+}
+
+/* Gibbon Data Table CSS - Will be moved to core.css */
+.dataTable {
+    overflow-x: auto;
+}
+
+.dataTable .sortable {
+	cursor: pointer;
+    position: relative;
+    padding-right: 20px;
+}
+
+.dataTable .sortable:not(.sorting):hover:after,
+.dataTable .sortASC:after,
+.dataTable .sortDESC:after {
+	content: '';
+	width: 0px;
+	height: 0px;
+	border: 5px solid transparent;
+	position: absolute;
+	top: 15px;
+	right: 6px;
+}
+
+.dataTable .sortable:not(.sorting):hover:after {
+	border-bottom: 5px solid #666666;
+	opacity: 0.4;
+}
+
+.dataTable .sortASC:after {
+	border-bottom: 5px solid #666666;
+}
+
+.dataTable .sortDESC:after {
+    border-top: 5px solid #666666;
+    top: 18px;
+}
+
+.dataTable input[type="button"],
+.dataTable input[type="button"]:hover {
+	font-size: 10px;
+	padding: 6px;
+	height: auto;
+	min-width: auto;
+}
+
+.dataTable .filters {
+    width: 70px;
+    height: 26px;
+    margin: 2px 5px 4px 0;
+}
+
+.dataTable .limit {
+    width: 50px;
+    height: 26px;
+    margin: 2px 0px 4px 0;
+}
+
+.dataTable header small,
+.dataTable footer small {
+    font-size: 12px;
+    line-height: 32px;
+}
+
+.dataTable .flexRow {
+    display : flex;
+    flex-flow: row nowrap;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.dataTable .expandable {
+    border-right: 0px !important;
+    padding: 0px !important;
+    overflow: visible;
+}
+
+.dataTable .expandable + td {
+    border-left: 0px !important;
+    padding-left: 4px !important;
+}
+
+.dataTable .expander {
+    display: block;
+    padding: 15px 10px;
+    cursor: pointer;
+}
+
+.dataTable .expander:before {
+    content: '';
+    border: solid #999;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 4px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transition: transform 0.2s;
+    pointer-events: none;
+}
+
+.dataTable .expander:hover:before {
+    border-color: #444;
+}
+
+.dataTable .expander.expanded:before {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+.bulkActionForm {
+    position: relative;
+}
+
+.bulkActionForm .bulkActionPanel {
+    position:absolute;
+    z-index:1;
+    top: 44px;
+    right: 0;
+    width: 100%;
+    background: #9d7cc6;
+    padding: 5px;
+    box-sizing: border-box;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+}
+
+.bulkActionForm .bulkActionPanel .LV_validation_message {
+    position: absolute;
+    bottom: -14px;
+}
+
+.bulkActionForm .bulkActionCount {
+    position: relative; 
+    right: 10px;
+    font-size:13px;
+    line-height:32px;
+    color:#fff
+}
+
+.bulkActionForm .bulkCheckbox {
+    position: relative;
+    text-align: center;
+}
+
+.bulkActionForm .bulkCheckbox label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.dataTable .linkTop {
+    margin: 0;
+    line-height: 32px;
+}
+
+button, input[type="submit"], input[type="button"] {
+	cursor: pointer;
+}
+
+button.active, input[type="submit"].active, input[type="button"].active {
+	background-color: #bbbbbb;
+}
+
+button[disabled], input[disabled], textarea[disabled] {
+	cursor: initial;
+	filter: alpha(opacity = 65);
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	opacity: .45;
+}
+
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+
+.submitted::before {
+    content: " ";
+    display: inline-block;
+    background: url("../img/refresh.png") no-repeat 0 0;
+    background-size: 100%;
+    animation: spin 2s infinite linear;
+    position: relative;
+    top: 3px;
+    right: 5px;
+    height: 14px;
+    width: 14px;
+    opacity: 0.65;
+}
+
+/* PRINT STYLES */
+body.print div.trail {
+    display: none;
+}
+
+@media print {
+    table tr {
+        page-break-inside: avoid;
+    }
 }
